integrating graphql (first commit)

--- a/package.json
+++ b/package.json
@@ -31,12 +31,14 @@
         "@nestjs/common": "^7.0.0",
         "@nestjs/config": "^0.5.0",
         "@nestjs/core": "^7.0.0",
+        "@nestjs/graphql": "^9.1.1",
         "@nestjs/jwt": "^7.1.0",
         "@nestjs/microservices": "^7.4.2",
         "@nestjs/passport": "^7.1.0",
         "@nestjs/platform-express": "^7.0.0",
         "@nestjs/swagger": "^4.5.12",
         "@nestjs/typeorm": "^7.1.0",
+        "apollo-server-express": "^3.5.0",
         "class-transformer": "^0.3.1",
         "class-validator": "^0.12.2",
         "eslint-config-airbnb-typescript": "^4.0.1",
@@ -45,6 +47,7 @@
         "eslint-plugin-sort-class-members": "^1.6.0",
         "eslint-plugin-sort-keys-fix": "^1.0.1",
         "eslint-plugin-unused-imports": "^0.1.1",
+        "graphql": "^15",
         "husky": "^3.0.5",
         "mariadb": "^2.4.2",
         "nats": "^1.4.9",
