--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
         "@nestjs/config": "^0.5.0",
         "@nestjs/core": "^7.0.0",
         "@nestjs/jwt": "^7.1.0",
-        "@nestjs/microservices": "^7.4.2",
+        "@nestjs/microservices": "^7.6.18",
         "@nestjs/passport": "^7.1.0",
         "@nestjs/platform-express": "^7.0.0",
         "@nestjs/swagger": "^4.5.12",
@@ -72,7 +72,7 @@
         "@types/uuid": "^3.4.5",
         "@typescript-eslint/eslint-plugin": "3.0.2",
         "@typescript-eslint/parser": "3.0.2",
-        "eslint": "7.1.0",
+        "eslint": "^7.1.0",
         "eslint-config-prettier": "^6.10.0",
         "eslint-plugin-import": "^2.20.1",
         "jest": "26.0.1",
