add orchestrator client config support function

--- a/.env_sample
+++ b/.env_sample
@@ -9,6 +9,9 @@ DB_USERNAME=root
 DB_PASSWORD=root
 DB_DATABASE=test
 JWT_SECRET = "secret"
-TRANSPORT_HOST = 127.0.0.1
-TRANSPORT_PORT = 8877
-TRANSPORT_MICROSERVICE_PORT = 8878
+ASSETS_HOST = 127.0.0.1
+ASSETS_PORT = 8877
+ACCOUNTS_HOST = 127.0.0.1
+ACCOUNTS_PORT = 8878
+SEARCH_HOST = 127.0.0.1
+SEARCH_PORT = 8879
