--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
         "graphql-query-complexity": "0.11.0",
         "graphql-subscriptions": "2.0.0",
         "husky": "^3.0.5",
+        "kafkajs": "^1.15.0",
         "mariadb": "^2.4.2",
         "nats": "^1.4.9",
         "nest-winston": "^1.4.0",
