--- a/package.json
+++ b/package.json
@@ -27,68 +27,68 @@
     },
     "dependencies": {
         "@apollo/gateway": "^0.44.1",
-        "@commitlint/cli": "^8.2.0",
-        "@commitlint/config-conventional": "^8.2.0",
-        "@nestjs/common": "8.2.2",
-        "@nestjs/config": "^0.5.0",
-        "@nestjs/core": "8.2.2",
         "@nestjs/graphql": "9.1.1",
-        "@nestjs/jwt": "^7.1.0",
-        "@nestjs/microservices": "^7.4.2",
-        "@nestjs/passport": "^7.1.0",
-        "@nestjs/platform-express": "8.2.2",
-        "@nestjs/swagger": "^4.5.12",
-        "@nestjs/typeorm": "^7.1.0",
         "apollo-server": "3.5.0",
         "apollo-server-express": "3.5.0",
-        "class-transformer": "0.4.0",
-        "class-validator": "0.13.1",
+        "graphql": "15.7.2",
+        "graphql-query-complexity": "0.11.0",
+        "graphql-subscriptions": "2.0.0",
+        "kafkajs": "^1.15.0",
+        "ts-morph": "^13.0.1",
+        "@commitlint/cli": "^8.2.0",
+        "@commitlint/config-conventional": "^8.2.0",
+        "@nestjs/common": "^7.0.0",
+        "@nestjs/config": "^0.5.0",
+        "@nestjs/core": "^7.0.0",
+        "@nestjs/jwt": "^7.1.0",
+        "@nestjs/microservices": "^7.6.18",
+        "@nestjs/passport": "^7.1.0",
+        "@nestjs/platform-express": "^7.0.0",
+        "@nestjs/swagger": "^4.5.12",
+        "@nestjs/typeorm": "^7.1.0",
+        "class-transformer": "^0.3.1",
+        "class-validator": "^0.12.2",
         "eslint-config-airbnb-typescript": "^4.0.1",
         "eslint-import-resolver-typescript": "^1.1.1",
         "eslint-plugin-jest": "^22.17.0",
         "eslint-plugin-sort-class-members": "^1.6.0",
         "eslint-plugin-sort-keys-fix": "^1.0.1",
         "eslint-plugin-unused-imports": "^0.1.1",
-        "graphql": "15.7.2",
-        "graphql-query-complexity": "0.11.0",
-        "graphql-subscriptions": "2.0.0",
         "husky": "^3.0.5",
-        "kafkajs": "^1.15.0",
         "mariadb": "^2.4.2",
         "nats": "^1.4.9",
         "nest-winston": "^1.4.0",
         "passport": "^0.4.1",
         "passport-jwt": "^4.0.0",
         "passport-local": "^1.0.0",
-        "reflect-metadata": "0.1.13",
+        "reflect-metadata": "^0.1.13",
         "rimraf": "^3.0.2",
-        "rxjs": "7.4.0",
+        "rxjs": "^6.5.4",
         "sequelize-typescript": "^1.1.0",
-        "ts-morph": "^13.0.1",
         "typeorm": "^0.2.25",
         "uuid": "^3.3.2"
     },
     "devDependencies": {
-        "@nestjs/cli": "8.1.5",
-        "@nestjs/schematics": "8.0.5",
-        "@nestjs/testing": "8.2.2",
-        "@types/express": "4.17.13",
+        "@nestjs/cli": "^7.0.0",
+        "@nestjs/schematics": "^7.0.0",
+        "@nestjs/testing": "^7.0.0",
+        "@types/express": "^4.17.3",
         "@types/jest": "25.2.3",
-        "@types/node": "16.11.8",
+        "@types/node": "^13.9.1",
         "@types/passport-jwt": "^3.0.3",
         "@types/passport-local": "^1.0.33",
-        "@types/supertest": "2.0.11",
+        "@types/supertest": "^2.0.8",
         "@types/uuid": "^3.4.5",
-        "@typescript-eslint/eslint-plugin": "4.33.0",
-        "@typescript-eslint/parser": "4.33.0",
-        "eslint": "7.32.0",
-        "eslint-config-prettier": "8.3.0",
-        "eslint-plugin-import": "2.25.3",
-        "jest": "27.3.1",
+        "@typescript-eslint/eslint-plugin": "3.0.2",
+        "@typescript-eslint/parser": "3.0.2",
+        "eslint": "^7.1.0",
+        "eslint-config-prettier": "^6.10.0",
+        "eslint-plugin-import": "^2.20.1",
+        "jest": "26.0.1",
         "lint-staged": "^9.2.5",
         "mysql": "^2.18.1",
-        "prettier": "2.4.1",
-        "supertest": "6.1.6",
+        "prettier": "^1.19.1",
+        "supertest": "^4.0.2",
         "swagger-ui-express": "^4.1.4",
         "ts-jest": "27.0.7",
         "ts-loader": "9.2.6",
