feat: integrated the base branch of basu

--- a/.env_sample
+++ b/.env_sample
@@ -1,6 +1,7 @@
 APP_PORT=3001
 ROUTE_PREFIX=/api
 SWAGGER_PATH=swagger
-JWT_SECRET = "secret"
 KAFKA_BROKERS=localhost:9092
 KAFKA_TOPIC=orl-layer
+TRANSPORT_HOST = 127.0.0.1
+TRANSPORT_PORT = 8877
