adding kafka setup details in readme file, adding custom graphql path, added comments for graphql test CRUD operations

--- a/.env_sample
+++ b/.env_sample
@@ -18,3 +18,4 @@ KAFKA_BROKERS=localhost:9092
 KAFKA_TOPIC=orl-layer
 TRANSPORT_HOST = 127.0.0.1
 TRANSPORT_PORT = 8877
+GRAPHQL_PATH=/graphql/userQL
