add docker-compose config

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,67 +5,30 @@
 version: '3.7'
 
 services:
-    templatebackend_housing:
-        container_name: templatebackend_housing
+    assets_orchestrator:
+        container_name: assets_orchestrator
         ports:
             - 3001:3001
+            - 8877:8877
         build:
             context: .
-            dockerfile: Dockerfile.dev
+            dockerfile: Dockerfile.assets
         networks:
             - backendnetwork
-        depends_on:
-            - redis
-            - mariadb
         env_file:
             - .env
-        volumes:
-            - type: bind
-              source: ./src
-              target: /app/src
-    redis:
-        container_name: redis_container
-        image: redis:5
-        volumes:
-            - type: volume
-              source: redis
-              target: /data
-        networks:
-            - backendnetwork
-    mariadb:
-        container_name: mariadb
-        image: 'mariadb:10.3.16'
-        restart: always
-        ports:
-            - 3306:3306
-        environment:
-            - MYSQL_USER=root
-            - MYSQL_PASSWORD=root
-            - MYSQL_DATABASE=test
-            - MYSQL_ROOT_PASSWORD=root
-        networks:
-            - backendnetwork
-    nginx:
-        image: nginx:mainline-alpine
-        container_name: nginx
-        volumes:
-            - ./nginx.conf:/etc/nginx/nginx.conf
-        networks:
-            - backendnetwork
-        ports:
-            - 80:80
-        depends_on:
-            - templatebackend_housing
-    adminer:
-        image: adminer
-        restart: always
-        networks:
-            - backendnetwork
-        ports:
-            - 9090:8080
 
+    accounts_orchestrator:
+        container_name: accounts_orchestrator
+        ports:
+            - 3002:3002
+            - 8878:8878
+        build:
+            context: ../../orl-main-micro-micro-service
+            dockerfile: Dockerfile
+        networks:
+            - backendnetwork
+        env_file:
+            - ../../orl-main-micro-micro-service/.env
 networks:
     backendnetwork:
-
-volumes:
-    redis:
