--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,5 +28,32 @@ services:
             - backendnetwork
         env_file:
             - ../../orl-main-micro-micro-service/.env
+
+    zookeeper:
+        image: bitnami/zookeeper:latest
+        container_name: zookeeper
+        networks:
+            - backendnetwork
+        ports:
+            - 2181:2181
+        environment:
+            - ALLOW_ANONYMOUS_LOGIN=yes
+
+    kafka:
+        image: bitnami/kafka:latest
+        container_name: kafka
+        networks:
+            - backendnetwork
+        ports:
+            - 9092:9092
+        environment:
+            - KAFKA_BROKER_ID=1
+            - KAFKA_LISTENERS=PLAINTEXT://:9092
+            - KAFKA_ADVERTISED_LISTENERS=PLAINTEXT://kafka:9092
+            - KAFKA_ZOOKEEPER_CONNECT=zookeeper:2181
+            - ALLOW_PLAINTEXT_LISTENER=yes
+        depends_on:
+            - zookeeper
+
 networks:
     backendnetwork:
