--- a/package.json
+++ b/package.json
@@ -27,25 +27,21 @@
     },
     "dependencies": {
         "@apollo/gateway": "^0.44.1",
-        "@nestjs/graphql": "9.1.1",
-        "apollo-server": "3.5.0",
-        "apollo-server-express": "3.5.0",
-        "graphql": "15.7.2",
-        "graphql-query-complexity": "0.11.0",
-        "graphql-subscriptions": "2.0.0",
-        "kafkajs": "^1.15.0",
-        "ts-morph": "^13.0.1",
         "@commitlint/cli": "^8.2.0",
         "@commitlint/config-conventional": "^8.2.0",
         "@nestjs/common": "^7.0.0",
         "@nestjs/config": "^0.5.0",
         "@nestjs/core": "^7.0.0",
+        "@nestjs/graphql": "9.1.1",
         "@nestjs/jwt": "^7.1.0",
         "@nestjs/microservices": "^7.6.18",
         "@nestjs/passport": "^7.1.0",
         "@nestjs/platform-express": "^7.0.0",
         "@nestjs/swagger": "^4.5.12",
         "@nestjs/typeorm": "^7.1.0",
+        "apollo-server": "3.5.0",
+        "apollo-server-express": "3.5.0",
+        "axios": "^0.24.0",
         "class-transformer": "^0.3.1",
         "class-validator": "^0.12.2",
         "eslint-config-airbnb-typescript": "^4.0.1",
@@ -54,10 +50,15 @@
         "eslint-plugin-sort-class-members": "^1.6.0",
         "eslint-plugin-sort-keys-fix": "^1.0.1",
         "eslint-plugin-unused-imports": "^0.1.1",
+        "graphql": "15.7.2",
+        "graphql-query-complexity": "0.11.0",
+        "graphql-subscriptions": "2.0.0",
         "husky": "^3.0.5",
+        "kafkajs": "^1.15.0",
         "mariadb": "^2.4.2",
         "nats": "^1.4.9",
         "nest-winston": "^1.4.0",
+        "node-fetch": "^3.1.0",
         "passport": "^0.4.1",
         "passport-jwt": "^4.0.0",
         "passport-local": "^1.0.0",
@@ -65,6 +66,7 @@
         "rimraf": "^3.0.2",
         "rxjs": "^6.5.4",
         "sequelize-typescript": "^1.1.0",
+        "ts-morph": "^13.0.1",
         "typeorm": "^0.2.25",
         "uuid": "^3.3.2"
     },
