--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
         "eslint-plugin-sort-keys-fix": "^1.0.1",
         "eslint-plugin-unused-imports": "^0.1.1",
         "graphql": "15.7.2",
+        "graphql-fields-list": "^2.2.4",
         "graphql-query-complexity": "0.11.0",
         "graphql-subscriptions": "2.0.0",
         "husky": "^3.0.5",
