--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
         "graphql": "15.7.2",
         "graphql-query-complexity": "0.11.0",
         "graphql-subscriptions": "2.0.0",
+        "graphql-type-json": "^0.3.2",
         "husky": "^3.0.5",
         "kafkajs": "^1.15.0",
         "mariadb": "^2.4.2",
